--- a/index.html
+++ b/index.html
@@ -32,7 +32,18 @@
 							<h2>Ipsum lorem dolor aliquam ante commodo<br />
 							magna sed accumsan arcu neque.</h2>
 						</header>
-						<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
+						<p>Researcher Assistant, 2019-Present,
+						Institute for Advanced Study,<br />
+						Tsinghua University</p>
+
+						<p>Visiting Student, 2018,<br />
+						Kavli Institute for Astrophysics and Space Research,<br />
+						Massachusetts Institute of Technology</p>
+
+						<p>Bachelor of Science, 2015-2019,<br />
+						Department of Scientific & Engineering Computing<br />
+						School of mathematical sciences,<br />
+						Peking University</p>
 						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul>
@@ -81,7 +92,7 @@
 				<!-- Three -->
 					<section id="three">
 						<h2>Get In Touch</h2>
-						<p></p>
+						<p>If you are interested in any problem that I'm working on or related, please contact me! I'm look forward to potential collaborators.</p>
 						<div class="row">
 							<div class="col-8 col-12-small">
 								<form method="post" action="#">
@@ -99,7 +110,8 @@
 								<ul class="labeled-icons">
 									<li>
 										<h3 class="icon solid fa-home"><span class="label">Address</span></h3>
-										Institute for Advanced Study, Tsinghua University <br />
+										303, Institute for Advanced Study,<br />
+										Tsinghua University, <br />
 										Beijing, 100084 <br />
 										China
 									</li>
@@ -109,7 +121,7 @@
 									</li>
 									<li>
 										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-										<a href="#">xuzhenghao@pku.edu.cn</a>
+										<a href="#">zhenghaoxu97[at]gmail.com</a>
 									</li>
 								</ul>
 							</div>
