--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 							<h2>Ipsum lorem dolor aliquam ante commodo<br />
 							magna sed accumsan arcu neque.</h2>
 						</header>
-						<p>Researcher Assistant, 2019-Present,
+						<p>Researcher Assistant, 2019-Present,<br />
 						Institute for Advanced Study,<br />
 						Tsinghua University</p>
 
@@ -128,8 +128,8 @@
 						</div>
 					</section>
 
-				<!-- Four -->
-				<!--
+				<-- Four -->
+				<--
 					<section id="four">
 						<h2>Elements</h2>
 
