--- a/index.html
+++ b/index.html
@@ -32,6 +32,28 @@
 							<h2>Ipsum lorem dolor aliquam ante commodo<br />
 							magna sed accumsan arcu neque.</h2>
 						</header>
+						<p><strong>Researcher Assistant</strong>, 2019-Present,<br />
+						Institute for Advanced Study,<br />
+						Tsinghua University</p>
+
+						<p><strong>Visiting Student</strong>, 2018,<br />
+						Kavli Institute for Astrophysics and Space Research,<br />
+						Massachusetts Institute of Technology</p>
+
+						<p><strong>Bachelor of Science</strong>, 2015-2019,<br />
+						Department of Scientific & Engineering Computing<br />
+						School of mathematical sciences,<br />
+						Peking University</p>
+						<ul class="actions">
+							<li><a href="#" class="button">Learn More</a></li>
+						</ul>
+					</section>
+
+				<!-- One More -->
+					<section id="one more">
+						<header class="major">
+							<h2>Biography</h2>
+						</header>
 						<p>Researcher Assistant, 2019-Present,<br />
 						Institute for Advanced Study,<br />
 						Tsinghua University</p>
@@ -128,8 +150,8 @@
 						</div>
 					</section>
 
-				<-- Four -->
-				<--
+				<!-- Four -->
+				<!--
 					<section id="four">
 						<h2>Elements</h2>
 
@@ -452,13 +474,14 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<footer id="footer">
 				<div class="inner">
 					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="https://www.zhihu.com/people/piao-shen-81" class="icon brands fa-zhihu"><span class="label">Zhihu</span></a></li>
+						<li><a href="https://https://github.com/zhenghaoxu" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<!-- <li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li> -->
+						<li><a href="zhenghaoxu97@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<!-- <li>&copy; Untitled</li> -->
+						<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</div>
 			</footer>
