--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>I am Zhenghao Xu</strong>, computational mathema<br />
-					<br />
-					crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1>
+					<h1><strong>I am Zhenghao Xu </strong>, an undergraduate at Peking University in Mathematics<br />						
+					Astrophysical Simulations and Machine Learning<br />
+					Please email me! <a href="zhenghaoxu97@gmail.com"> </a>.</h1>
 				</div>
 			</header>
 
@@ -143,7 +143,7 @@
 									</li>
 									<li>
 										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-										<a href="#">zhenghaoxu97[at]gmail.com</a>
+										<a href="#">zhenghaoxu97@gmail.com</a>
 									</li>
 								</ul>
 							</div>
