--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>I am Zhenghao Xu </strong>, an undergraduate at Peking University in Mathematics<br />						
+					<h1><strong>I am Zhenghao Xu </strong>, an undergraduate at Peking University in Computational Mathematics<br />						
 					Astrophysical Simulations and Machine Learning<br />
 					Please email me! <a href="zhenghaoxu97@gmail.com"> </a>.</h1>
 				</div>
