--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>I am Zhenghao Xu,</strong>, B.S. in Mathematics at Peking University, working on Astrophysical Simulations and Machine Learning<br />
-					Please email me! <a href="zhenghaoxu97@gmail.com">zhenghaoxu97@gmail.com</a>.</h1>
+					<h1><strong>I am Zhenghao Xu,</strong>, B.S. in Mathematics at Peking University, working on Astrophysical Simulations and Machine Learning. 
+					Please email me! <a href="mailto:zhenghaoxu97@gmail.com">zhenghaoxu97@gmail.com</a>.</h1>
 				</div>
 			</header>
 
@@ -476,9 +476,9 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 				<div class="inner">
 					<ul class="icons">
 						<li><a href="https://www.zhihu.com/people/piao-shen-81" class="icon brands fa-zhihu"><span class="label">Zhihu</span></a></li>
-						<li><a href="https://https://github.com/zhenghaoxu" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="https://github.com/zhenghaoxu" class="icon brands fa-github"><span class="label">Github</span></a></li>
 						<!-- <li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li> -->
-						<li><a href="zhenghaoxu97@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<!-- <li><a href="zhenghaoxu97@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li> -->
 					</ul>
 					<ul class="copyright">
 						<!-- <li>&copy; Untitled</li> -->
