--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>I am Zhenghao Xu,</strong>, B.S. in Mathematics at Peking University, working on Astrophysical Simulations and Machine Learning. 
-					Please email me! <a href="mailto:zhenghaoxu97@gmail.com">zhenghaoxu97@gmail.com</a>.</h1>
+					<h1>
+						<strong>I am Zhenghao Xu</strong> B.S. in Mathematics at Peking University, working on Astrophysical Simulations and Machine Learning!
+					</a>.
+					</h1>
 				</div>
 			</header>
 
@@ -28,8 +30,24 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Ipsum lorem dolor aliquam ante commodo<br />
-							magna sed accumsan arcu neque.</h2>
+							<h2>RESEARCH INTEREST</h2>
+						</header>
+						<p>
+						Hi, I'm Zhenghao Xu (徐政豪, IPA: /ʈ͡ʂəŋ xɑu ɕy/). My general research interests cover Computer Vision and Machine Learning. I received my B.S. in Machine Intelligence from Peking University, advised by Professor Jiaying Liu. I also worked with Haoqiang Fan at Face++.
+						</p>
+						<p>If you are interested in any problem that I'm working on or related, please contact me! I'm look forward to potential collaborators!
+						<a href="mailto:zhenghaoxu97[at]gmail.com">zhenghaoxu97@gmail.com
+						</p>
+						<ul class="actions">
+							<li><a href="#" class="button">Learn More</a></li>
+						</ul>
+					</section>
+
+				<!-- One More -->
+				
+					<section id="one more">
+						<header class="major">
+							<h2>BIOGRAPHY</h2>
 						</header>
 						<p><strong>Researcher Assistant</strong>, 2019-Present,<br />
 						Institute for Advanced Study,<br />
@@ -47,30 +65,7 @@
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul>
 					</section>
-
-				<!-- One More -->
-				<!--
-					<section id="one more">
-						<header class="major">
-							<h2>Biography</h2>
-						</header>
-						<p>Researcher Assistant, 2019-Present,<br />
-						Institute for Advanced Study,<br />
-						Tsinghua University</p>
-
-						<p>Visiting Student, 2018,<br />
-						Kavli Institute for Astrophysics and Space Research,<br />
-						Massachusetts Institute of Technology</p>
-
-						<p>Bachelor of Science, 2015-2019,<br />
-						Department of Scientific & Engineering Computing<br />
-						School of mathematical sciences,<br />
-						Peking University</p>
-						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
-						</ul>
-					</section>
-				-->
+				
 
 				<!-- Two -->
 					<section id="two">
@@ -115,7 +110,7 @@
 				<!-- Three -->
 					<section id="three">
 						<h2>Get In Touch</h2>
-						<p>If you are interested in any problem that I'm working on or related, please contact me! I'm look forward to potential collaborators.</p>
+						<p>If you are interested in any problem that I'm working on or related, please contact me! I'm look forward to potential collaborators!</p>
 						<div class="row">
 							<div class="col-8 col-12-small">
 								<form method="post" action="#">
@@ -133,8 +128,9 @@
 								<ul class="labeled-icons">
 									<li>
 										<h3 class="icon solid fa-home"><span class="label">Address</span></h3>
-										303, Institute for Advanced Study,<br />
-										Tsinghua University, <br />
+										<br />
+										303, IAS,<br />
+										Tsinghua University,<br />
 										Beijing, 100084 <br />
 										China
 									</li>
