--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 					<h1>
-						<strong>I am Zhenghao Xu</strong> B.S. in Mathematics at Peking University, working on Astrophysical Simulations and Machine Learning!
+						<strong>I am Zhenghao Xu, </strong><br />
+						B.S. in Mathematics at Peking University, <br />
+						working on Astrophysical Simulations and Machine Learning!
 					</a>.
 					</h1>
 				</div>
