--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 						School of mathematical sciences,<br />
 						Peking University</p>
 						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
+							<li><a href="/image/ZhenghaoXu.pdf" class="button">Curriculum vitae</a></li>
 						</ul>
 					</section>
 				
