--- a/index.html
+++ b/index.html
@@ -38,10 +38,9 @@
 						Hi, I'm Zhenghao Xu (徐政豪, IPA: /ʈ͡ʂəŋ xɑu ɕy/). My general research interests cover Computer Vision and Machine Learning. I received my B.S. in Machine Intelligence from Peking University, advised by Professor Jiaying Liu. I also worked with Haoqiang Fan at Face++.
 						</p>
 						<p>If you are interested in any problem that I'm working on or related, please contact me! I'm look forward to potential collaborators!
-						<a href="mailto:zhenghaoxu97[at]gmail.com">zhenghaoxu97@gmail.com
 						</p>
 						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
+							<li><a href="mailto:zhenghaoxu97[at]gmail.com" class="button">Email: xuzhenghao[at]pku[dot]edu[dot]cn</a></li>
 						</ul>
 					</section>
 
