--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 						<p>If you are interested in any problem that I'm working on or related, please contact me! I'm look forward to potential collaborators!
 						</p>
 						<ul class="actions">
-							<li><a href="mailto:zhenghaoxu97[at]gmail.com" class="button">Email: xuzhenghao[at]pku[dot]edu[dot]cn</a></li>
+							<li><a href="mailto:xuzhenghao@pku.edu.cn" class="button">Contact Me!</a></li>
 						</ul>
 					</section>
 
@@ -63,7 +63,7 @@
 						School of mathematical sciences,<br />
 						Peking University</p>
 						<ul class="actions">
-							<li><a href="/image/ZhenghaoXu.pdf" class="button">Curriculum vitae</a></li>
+							<li><a href="image/ZhenghaoXu.pdf" class="button">Curriculum vitae</a></li>
 						</ul>
 					</section>
 				
