--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 						School of mathematical sciences,<br />
 						Peking University</p>
 						<ul class="actions">
-							<li><a href="image/ZhenghaoXu.pdf" class="button">Curriculum vitae</a></li>
+							<li><a href="image/ZhenghaoXu.pdf" class="button"><img src="images/ZhenghaoXu.pdf" alt="" />Curriculum vitae</a></li>
 						</ul>
 					</section>
 				
