--- a/index.html
+++ b/index.html
@@ -90,32 +90,32 @@
 					<section id="two">
 						<h2>Recent Work</h2>
 						<div class="row">
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
+							<article class="col-12 col-12-xsmall work-item">
+								<a href="images/fulls/visu7.gif" class="image fit thumb"><img src="images/thumbs/visu7.gif" alt="" /></a>
 								<h3>Magna sed consequat tempus</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
-							<article class="col-6 col-12-xsmall work-item">
+							<article class="col-12 col-12-xsmall work-item">
 								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
 								<h3>Ultricies lacinia interdum</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
-							<article class="col-6 col-12-xsmall work-item">
+							<article class="col-12 col-12-xsmall work-item">
 								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
 								<h3>Tortor metus commodo</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
+							<article class="col-12 col-12-xsmall work-item">
+								<a href="images/fulls/MUSCL_HLLC_MC_config05.jpg" class="image fit thumb"><img src="images/thumbs/MUSCL_HLLC_MC_config05.jpg" alt="" /></a>
 								<h3>Quam neque phasellus</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/visudark.gif" class="image fit thumb"><img src="images/thumbs/visudark.gif" alt="" /></a>
+							<article class="col-12 col-12-xsmall work-item">
+								<a href="images/fulls/FVM1D.png" class="image fit thumb"><img src="images/thumbs/FVM1D.png" alt="" /></a>
 								<h3>Nunc enim commodo aliquet</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
-							<article class="col-6 col-12-xsmall work-item">
+							<article class="col-12 col-12-xsmall work-item">
 								<a href="images/fulls/DDDQN_result.png" class="image fit thumb"><img src="images/thumbs/DDDQN_result.png" alt="" /></a>
 								<h3>Risus ornare lacinia</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
@@ -167,7 +167,7 @@
 
 		<!-- Four -->
 				
-					<section id="four">
+					<!-- <section id="four">
 						<h2>Elements</h2>
 
 						<section>
@@ -483,7 +483,7 @@
 					</section>
 				
 
-			</div>
+			</div> -->
 
 		<!-- Footer -->
 			<footer id="footer">
