--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 						</header>
 						<p>Hi, I'm Zhenghao Xu (徐政豪, IPA: /ʈ͡ʂəŋ xɑu ɕy/). Currently, I am a <b>research assistant</b> at <a href="http://www.castu.tsinghua.edu.cn/publish/casen/index.html">Institute for Advanced Study, Tsinghua University</a>. I received my <b>B.S. in Mathematics </b> from <a href="http://english.math.pku.edu.cn/">School of Mathematical Sciences, Peking University</a>, in July of 2019, majoring in Applied and Computational Mathematics.</p>
 
-						<p>My general research interests cover <strong>Computational Astrophysics and Machine Learning</strong>.</p>
+						<p>my general research interests cover the Interdisciplinary study of Applied Mathematics, Fluid Mechanics and Astrophysics, especially <strong>Computational Astrophysics and Machine Learning</strong>.</p>
 
 						<p>If you are interested in any problem that I'm working on or related, please contact me! I'm look forward to potential collaborators!</p>
 
