--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 						</header>
 						<p>Hi, I'm Zhenghao Xu (徐政豪, IPA: /ʈ͡ʂəŋ xɑu ɕy/). Currently, I am a <b>research assistant</b> at <a href="http://www.castu.tsinghua.edu.cn/publish/casen/index.html">Institute for Advanced Study, Tsinghua University</a>. I received my <b>B.S. in Mathematics </b> from <a href="http://english.math.pku.edu.cn/">School of Mathematical Sciences, Peking University</a>, in July of 2019, majoring in Applied and Computational Mathematics.</p>
 
-						<p>my general research interests cover the Interdisciplinary study of Applied Mathematics, Fluid Mechanics and Astrophysics, especially <strong>Computational Astrophysics and Machine Learning</strong>.</p>
+						<p>My general research interests cover the Interdisciplinary study of Applied Mathematics, Fluid Mechanics and Astrophysics, especially <strong>Computational Astrophysics and Machine Learning</strong>.</p>
 
 						<p>If you are interested in any problem that I'm working on or related, please contact me! I'm look forward to potential collaborators!</p>
 
@@ -89,6 +89,7 @@
 				<!-- Two -->
 					<section id="two">
 						<h2>Recent Work</h2>
+						<h3>Computational Astrophysics + Machine Learning</h3>
 						<div class="row">
 							<article class="col-12 col-12-xsmall work-item">
 								<a href="images/fulls/visu7.gif" class="image fit thumb"><img src="images/thumbs/visu7.gif" alt="" /></a>
@@ -100,26 +101,35 @@
 								<h3>Ultricies lacinia interdum</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
-							<article class="col-12 col-12-xsmall work-item">
-								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
-								<h3>Tortor metus commodo</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
+						<h3>Numerical Mathematics</h3>
 							<article class="col-12 col-12-xsmall work-item">
 								<a href="images/fulls/MUSCL_HLLC_MC_config05.jpg" class="image fit thumb"><img src="images/thumbs/MUSCL_HLLC_MC_config05.jpg" alt="" /></a>
-								<h3>Quam neque phasellus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+							<!-- </article>
+							<article class="col-6 col--xsmall work-item">
+								<a href="images/fulls/FVM1D.png" class="image fit thumb"><img src="images/thumbs/FVM1D.png" alt="" /></a>
 							</article>
 							<article class="col-12 col-12-xsmall work-item">
-								<a href="images/fulls/FVM1D.png" class="image fit thumb"><img src="images/thumbs/FVM1D.png" alt="" /></a>
-								<h3>Nunc enim commodo aliquet</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+							 -->
+								<h3>Navier-Stokes Fluid Dynamics Simulator</h3>
+								<p>Second-Order Godunov Scheme Finite Volume Method with various approximation Riemann Solvers (Roe, vanLeer, HLLC, etc.), high-accuracy and high-performance.</p>
+							</article>
+							<article class="col-12 col-12-xsmall work-item">
+								<a href="images/fulls/possion.jpg" class="image fit thumb"><img src="images/thumbs/possion.jpg" alt="" /></a>
+								<h3>Numerical PDE Solver</h3>
+								<p>Multi-Grid Preconditioner Conjugate Gradient Numerical PDE Solver, using both Finite Different Scheme and Finite Element Scheme, in the best case, will reduce the time complexity from O(n^3/2) to O(n).</p>
+							</article>
+						<h3>Machine Learning</h3>
+							<article class="col-12 col-12-xsmall work-item">
+								<a href="images/fulls/tsne_cropped.png" class="image fit thumb"><img src="images/thumbs/tsne_cropped.png" alt="" /></a>
+								<h3>Calligraphy AI via Autoencoder</h3>
+								<p>After self-supervised training with unlabeled font images, the network learns the in-situ distribution of calligraphy and transferring one style to another.</p>
 							</article>
 							<article class="col-12 col-12-xsmall work-item">
 								<a href="images/fulls/DDDQN_result.png" class="image fit thumb"><img src="images/thumbs/DDDQN_result.png" alt="" /></a>
-								<h3>Risus ornare lacinia</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<h3>Stock Trading AI, using Deep Reinforcement Learning</h3>
+								<p>With Dual Double Deep Q-Network, the agent is able to profit in real stock market without any prior human knowledge.</p>
 							</article>
+							
 						</div>
 						<ul class="actions">
 							<li><a href="research.html" class="button">Full Portfolio</a></li>
