--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
 						</header>
 						<p>Hi, I'm Zhenghao Xu (徐政豪, IPA: /ʈ͡ʂəŋ xɑu ɕy/). Currently, I am a <b>research assistant</b> at <a href="http://www.castu.tsinghua.edu.cn/publish/casen/index.html">Institute for Advanced Study, Tsinghua University</a>. I received my <b>B.S. in Mathematics </b> from <a href="http://english.math.pku.edu.cn/">School of Mathematical Sciences, Peking University</a>, in July of 2019, majoring in Applied and Computational Mathematics.</p>
 
-						<p>My general research interests cover the Interdisciplinary study of Applied Mathematics, Fluid Mechanics and Astrophysics, especially <strong>Computational Astrophysics and Machine Learning</strong>. My philosophy doesn't believe Machine can 'learn' Physics, but Machine Learning can help us Falsify Hypotheses.</p>
+						<p>My general research interests cover the Interdisciplinary study of Applied Mathematics, Fluid Mechanics and Astrophysics, especially <strong>Computational Astrophysics and Machine Learning</strong>.</p>
+
+						<!-- <p>Bayesian inference for sophisticated models in a computationally tractable implementation; data-driven approaches to model disk rotation curves and search for the influence of planets;</p> -->
 
 						<p>If you are interested in any problem that I'm working on or related, please contact me! I'm look forward to potential collaborators!</p>
 
@@ -92,15 +94,13 @@
 						<div class="row">
 							<article class="col-12 col-12-xsmall work-item">
 								<a href="images/fulls/visu7.gif" class="image fit thumb"><img src="images/thumbs/visu7.gif" alt="" /></a>
-								<h3 >Magna sed consequat tempus</h3 >
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<h3 >Inferring the hyperfine distribution of dark matter halos</h3 >
+								<p>By simply inputting the gas distribution of the galaxy, the GAN(generative adversial network) can unprecedentedly map the dark matter distribution.</p>
 								<a href="research.html"> More</a>
 							</article>
 							<article class="col-12 col-12-xsmall work-item">
-								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
-								<h3 >Ultricies lacinia interdum</h3 >
+								<a href="images/fulls/visunew.png" class="image fit thumb"><img src="images/thumbs/visunew.png" alt="" /></a>
+								<h3 >Data-driven multi-fluid accretion disk model that can be generated in seconds</h3 >
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 						<!-- <h2>II. Numerical Mathematics</h2> -->
@@ -114,6 +114,7 @@
 							 -->
 								<h3 >Navier-Stokes Fluid Dynamics Simulator</h3 >
 								<p>Second-Order Godunov Scheme Finite Volume Method with various approximation Riemann Solvers (Roe, vanLeer, HLLC, etc.), high-accuracy and high-performance.</p>
+								<p><a href="research.html"> More</a></p>
 							</article>
 							<article class="col-12 col-12-xsmall work-item">
 								<a href="images/fulls/possion.jpg" class="image fit thumb"><img src="images/thumbs/possion.jpg" alt="" /></a>
