--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 					<h1>
-						<strong>I am Zhenghao Xu, </strong> B.S. in Mathematics at Peking University, working on <strong>Astrophysical Simulations + Machine Learning</strong>
+						<strong>I am Zhenghao Xu, </strong> B.S. in Mathematics at Peking University, Developing on <strong>Radiation Transfer Simulations</strong> and <strong>Astrophysical Simulations + Machine Learning</strong>
 					</a>.
 					</h1>
 				</div>
@@ -44,7 +44,8 @@
 						</header>
 						<p>Hi, I'm Zhenghao Xu (徐政豪, IPA: /ʈ͡ʂəŋ xɑu ɕy/). Currently, I am a <b>research assistant</b> at <a href="http://www.castu.tsinghua.edu.cn/publish/casen/index.html">Institute for Advanced Study, Tsinghua University</a>. I received my <b>B.S. in Mathematics </b> from <a href="http://english.math.pku.edu.cn/">School of Mathematical Sciences, Peking University</a>, in July of 2019, majoring in Applied and Computational Mathematics.</p>
 
-						<p>My general research interests cover the Interdisciplinary study of Applied Mathematics, Fluid Mechanics and Astrophysics, especially <strong>Computational Astrophysics and Machine Learning</strong>.</p>
+						<p>My general research interests cover the interdisciplinary study of Applied Mathematics, Data Science and Astrophysics. 
+						Currently, I am working on three projects: (1). High-order Short Characteristic Ray-Tracing <strong>Radiation Transfer Simulations</strong>. (2). Using Unsupervised Deep Learning to disentangle physical properties in <strong>Dust-Gas coupled Protoplanetary Diskes</strong>. (3). </p>
 
 						<!-- <p>Bayesian inference for sophisticated models in a computationally tractable implementation; data-driven approaches to model disk rotation curves and search for the influence of planets;</p> -->
 
