--- a/index.html
+++ b/index.html
@@ -91,20 +91,33 @@
 						<header class="major">
 							<h2>RECENT WORK</h2>
 						</header>
-						<!-- <h2>I. Computational Astrophysics + Machine Learning</h2> -->
+						<h2>I. Computational Astrophysics + Machine Learning</h2>
 						<div class="row">
 							<article class="col-12 col-12-xsmall work-item">
 								<a href="images/fulls/visu7.gif" class="image fit thumb"><img src="images/thumbs/visu7.gif" alt="" /></a>
+								<article class="col-12 col-12-xsmall work-item">
+								<a href="images/fulls/visunew.png" class="image fit thumb"><img src="images/thumbs/visunew.png" alt="" /></a>
 								<h3 >Inferring the hyperfine distribution of dark matter halos</h3 >
 								<p>By simply inputting the gas distribution of the galaxy, the GAN(generative adversial network) can unprecedentedly map the dark matter distribution.</p>
 								<a href="research.html"> More</a>
 							</article>
-							<article class="col-12 col-12-xsmall work-item">
-								<a href="images/fulls/visunew.png" class="image fit thumb"><img src="images/thumbs/visunew.png" alt="" /></a>
+							
 								<h3 >Data-driven multi-fluid accretion disk model that can be generated in seconds</h3 >
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
-						<!-- <h2>II. Numerical Mathematics</h2> -->
+						<h2>II. Numerical Mathematics</h2>
+							<article class="col-12 col-12-xsmall work-item">
+								<!-- <a href="images/fulls/MUSCL_HLLC_MC_config05.jpg" class="image fit thumb"><img src="images/thumbs/MUSCL_HLLC_MC_config05.jpg" alt="" /></a> -->
+							<!-- </article>
+							<article class="col-6 col--xsmall work-item">
+								<a href="images/fulls/FVM1D.png" class="image fit thumb"><img src="images/thumbs/FVM1D.png" alt="" /></a>
+							</article>
+							<article class="col-12 col-12-xsmall work-item">
+							 -->
+								<h3 >Short Ray-tracing Scheme Varitional Eddinton Tensors in Radiation Hydrodynamics</h3 >
+								<p></p>
+								<p><a href="research.html"> More</a></p>
+							</article>
 							<article class="col-12 col-12-xsmall work-item">
 								<a href="images/fulls/MUSCL_HLLC_MC_config05.jpg" class="image fit thumb"><img src="images/thumbs/MUSCL_HLLC_MC_config05.jpg" alt="" /></a>
 							<!-- </article>
@@ -122,7 +135,7 @@
 								<h3 >Numerical PDE Solver</h3 >
 								<p>Multi-Grid Preconditioner Conjugate Gradient Numerical PDE Solver, using both Finite Different Scheme and Finite Element Scheme, in the best case, will reduce the time complexity from O(n^3/2) to O(n).</p>
 							</article>
-						<!-- <h2>III. Machine Learning</h2> -->
+						<h2>III. Machine Learning</h2>
 							<article class="col-12 col-12-xsmall work-item">
 								<a href="images/fulls/DDDQN_result.png" class="image fit thumb"><img src="images/thumbs/DDDQN_result.png" alt="" /></a>
 								<h3 >Stock Trading AI, using Deep Reinforcement Learning</h3 >
