--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 						<p>Hi, I'm Zhenghao Xu (徐政豪, IPA: /ʈ͡ʂəŋ xɑu ɕy/). Currently, I am a <b>research assistant</b> at <a href="http://www.castu.tsinghua.edu.cn/publish/casen/index.html">Institute for Advanced Study, Tsinghua University</a>. I received my <b>B.S. in Mathematics </b> from <a href="http://english.math.pku.edu.cn/">School of Mathematical Sciences, Peking University</a>, in July of 2019, majoring in Applied and Computational Mathematics.</p>
 
 						<p>My general research interests cover the interdisciplinary study of Applied Mathematics, Data Science and Astrophysics. 
-						Currently, I am working on three projects: (1). High-order Short Characteristic Ray-Tracing <strong>Radiation Transfer Simulations. (2) Deep Illustris <strong>Inferring Unobservable Structures of Galaxies via Deep Generative Networks</strong> (3). Using Unsupervised Deep Learning to disentangle physical properties in <strong>Dust-Gas coupled Protoplanetary Diskes</strong>. </p>
+						Currently, I am working on three projects: (1). High-order Short Characteristic Ray-Tracing <strong>Radiation Transfer Simulations. (2) Deep Illustris <strong>Inferring Unobservable Structures of Galaxies via Deep Generative Networks</strong> (3). Using Unsupervised Deep Learning to disentangle physical properties in <strong>Dust-Gas coupled Accretion Diskes</strong>. </p>
 
 						<!-- <p>Bayesian inference for sophisticated models in a computationally tractable implementation; data-driven approaches to model disk rotation curves and search for the influence of planets;</p> -->
 
@@ -91,7 +91,7 @@
 						<header class="major">
 							<h2>RECENT WORK</h2>
 						</header>
-						<h2>I. Computational Astrophysics + Machine Learning</h2>
+						<h2>I. Computational Astrophysics + Deep Learning</h2>
 						<div class="row">
 							<article class="col-12 col-12-xsmall work-item">
 								<a href="images/fulls/visu7.gif" class="image fit thumb"><img src="images/thumbs/visu7.gif" alt="" /></a>
@@ -101,11 +101,10 @@
 								<p>By simply inputting the gas distribution of the galaxy, the GAN(generative adversial network) can unprecedentedly map the dark matter distribution.</p>
 								<a href="research.html"> More</a>
 							</article>
-							
 								<h3 >Data-driven multi-fluid accretion disk model that can be generated in seconds</h3 >
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
-						<h2>II. Numerical Mathematics</h2>
+						<h2>II. Computational Mathematics and Physics</h2>
 							<article class="col-12 col-12-xsmall work-item">
 								<!-- <a href="images/fulls/MUSCL_HLLC_MC_config05.jpg" class="image fit thumb"><img src="images/thumbs/MUSCL_HLLC_MC_config05.jpg" alt="" /></a> -->
 							<!-- </article>
@@ -135,7 +134,7 @@
 								<h3 >Numerical PDE Solver</h3 >
 								<p>Multi-Grid Preconditioner Conjugate Gradient Numerical PDE Solver, using both Finite Different Scheme and Finite Element Scheme, in the best case, will reduce the time complexity from O(n^3/2) to O(n).</p>
 							</article>
-						<h2>III. Machine Learning</h2>
+						<h2>III. Just AI</h2>
 							<article class="col-12 col-12-xsmall work-item">
 								<a href="images/fulls/DDDQN_result.png" class="image fit thumb"><img src="images/thumbs/DDDQN_result.png" alt="" /></a>
 								<h3 >Stock Trading AI, using Deep Reinforcement Learning</h3 >
