--- a/index.html
+++ b/index.html
@@ -45,7 +45,13 @@
 						<p>Hi, I'm Zhenghao Xu (徐政豪, IPA: /ʈ͡ʂəŋ xɑu ɕy/). Currently, I am a <b>research assistant</b> at <a href="http://www.castu.tsinghua.edu.cn/publish/casen/index.html">Institute for Advanced Study, Tsinghua University</a>. I received my <b>B.S. in Mathematics </b> from <a href="http://english.math.pku.edu.cn/">School of Mathematical Sciences, Peking University</a>, in July of 2019, majoring in Applied and Computational Mathematics.</p>
 
 						<p>My general research interests cover the interdisciplinary study of Applied Mathematics, Data Science and Astrophysics. 
-						Currently, I am working on three projects: (1). High-order Short Characteristic Ray-Tracing <strong>Radiation Transfer Simulations. </strong>(2) <a href="https://github.com/zhxu-astro/DeepIllustris">Deep Illustris</a> <strong>Inferring Unobservable Structures of Galaxies via Deep Generative Networks</strong> (3). Using Unsupervised Deep Learning to disentangle physical properties in <strong>Dust-Gas coupled Accretion Diskes</strong>. </p>
+						Currently, I am working on three projects: 
+
+						(1). High-order Short Characteristic Ray-Tracing <strong>Radiation Transfer Simulations. </strong>
+
+						(2) <a href="https://github.com/zhxu-astro/DeepIllustris">Deep Illustris</a> <strong>Inferring Unobservable Structures of Galaxies via Deep Generative Networks</strong> 
+
+						(3). Using Unsupervised Deep Learning to disentangle physical properties in <strong>Dust-Gas coupled Accretion Diskes</strong>. </p>
 
 						<!-- <p>Bayesian inference for sophisticated models in a computationally tractable implementation; data-driven approaches to model disk rotation curves and search for the influence of planets;</p> -->
 
