--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 					<h1>
-						<strong>I am Zhenghao Xu, </strong> B.S. in Mathematics at Peking University, Developing on <strong>Radiation Transfer Simulations</strong> and <strong>Astrophysical Simulations + Machine Learning</strong>
+						<strong>Hi, I am Zhenghao Xu, a 3nd year Graduate Student at UCSB </strong>
 					</a>.
 					</h1>
 				</div>
@@ -42,7 +42,7 @@
 						<header class="major">
 							<h2>RESEARCH INTEREST</h2>
 						</header>
-						<p>Hi, I'm Zhenghao Xu (徐政豪, IPA: /ʈ͡ʂəŋ xɑu ɕy/). Currently, I am a graduate student at <a href="https://www.physics.ucsb.edu">Department of Physics, University of California, Santa Barbara</a>. I used to work as a <b>research assistant</b> at <a href="http://www.castu.tsinghua.edu.cn/publish/casen/index.html">Institute for Advanced Study, Tsinghua University</a>. I received my <b>B.S. in Mathematics </b> from <a href="http://english.math.pku.edu.cn/">School of Mathematical Sciences, Peking University</a>, in July of 2019, major in Applied and Computational Mathematics, as well as minor in Chinese Language & Literature. I worked as game developer in the indie game group MINIBUGS in 2020. </p>
+						<p>Hi, I'm Zhenghao Xu 徐政豪. Currently, I am a graduate student at <a href="https://www.physics.ucsb.edu">Department of Physics, University of California, Santa Barbara</a>. I used to work as a <b>research assistant</b> at <a href="http://www.castu.tsinghua.edu.cn/publish/casen/index.html">Institute for Advanced Study, Tsinghua University</a>. I received my <b>B.S. in Mathematics </b> from <a href="http://english.math.pku.edu.cn/">School of Mathematical Sciences, Peking University</a>, in July of 2019, major in Applied and Computational Mathematics, as well as minor in Chinese Language & Literature. I worked as game developer in the indie game group MINIBUGS in 2020. </p>
 
 						<p>My general research interests cover the interdisciplinary study of Applied Mathematics, Data Science and Astrophysics. 
 						Currently, I am working on three projects: 
