--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
+					<a href="#" class="image avatar"><img src="images/avatar2.png" alt="" /></a>
 					<h1>
 						<strong>Hi, I am Zhenghao Xu, a 3nd year Graduate Student at UCSB </strong>
 					</a>.
