--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
+<!DOCTYPE HTML>
 <html>
 	<head>
 		<title>Zhenghao Xu's Homepage</title>
@@ -13,55 +14,76 @@
 	</head>
 	<body class="is-preload">
 		<!-- Header -->
-			<header id="header">
-				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/avatar2.png" alt="" /></a>
-					<h1>
-						<strong>Hi, I am Zhenghao Xu, a 3nd year Graduate Student at UCSB </strong>
-					</a>.
-					</h1>
-				</div>
-			</header>
+		<header id="header">
+			<div class="inner">
+				<a href="#" class="image avatar"><img src="images/avatar2.png" alt="" /></a>
+				<h1>
+					<strong>Hi, I am Zhenghao Xu, a 3rd year Graduate Student at UCSB</strong>
+				</h1>
+			</div>
+		</header>
 
 		<!-- Main -->
-			<div id="main">
+		<div id="main">
 
-				<!-- Menu -->
-					<!-- <section id="menu">
-						<head class="major"> 
-							<ul class="actions">
-							<li><a href="index.html" class="button">Homepage</a></li>
-							<li><a href="generic.html" class="button">Research</a></li>
-							<li><a href="elements.html" class="button">Biography</a></li>
-							</ul>
-						</head>
-					</section> -->
+			<!-- Research Interest -->
+			<section id="research">
+				<header class="major">
+					<h2>RESEARCH INTEREST</h2>
+				</header>
+				<p>Hi, I'm Zhenghao Xu 徐政豪. Currently, I am a graduate student at <a href="https://www.physics.ucsb.edu">Department of Physics, University of California, Santa Barbara</a>. I used to work as a <b>research assistant</b> at <a href="http://www.castu.tsinghua.edu.cn/publish/casen/index.html">Institute for Advanced Study, Tsinghua University</a>. I received my <b>B.S. in Mathematics </b> from <a href="http://english.math.pku.edu.cn/">School of Mathematical Sciences, Peking University</a>, in July of 2019, major in Applied and Computational Mathematics, as well as minor in Chinese Language & Literature. I worked as game developer in the indie game group MINIBUGS in 2020. </p>
 
-				<!-- One -->
-					<section id="one">
-						<header class="major">
-							<h2>RESEARCH INTEREST</h2>
-						</header>
-						<p>Hi, I'm Zhenghao Xu 徐政豪. Currently, I am a graduate student at <a href="https://www.physics.ucsb.edu">Department of Physics, University of California, Santa Barbara</a>. I used to work as a <b>research assistant</b> at <a href="http://www.castu.tsinghua.edu.cn/publish/casen/index.html">Institute for Advanced Study, Tsinghua University</a>. I received my <b>B.S. in Mathematics </b> from <a href="http://english.math.pku.edu.cn/">School of Mathematical Sciences, Peking University</a>, in July of 2019, major in Applied and Computational Mathematics, as well as minor in Chinese Language & Literature. I worked as game developer in the indie game group MINIBUGS in 2020. </p>
+				<p>My general research interests cover the interdisciplinary study of Applied Mathematics, Data Science and Astrophysics. 
+				Currently, I am working on three projects: 
 
-						<p>My general research interests cover the interdisciplinary study of Applied Mathematics, Data Science and Astrophysics. 
-						Currently, I am working on three projects: 
+				(1). High-order Short Characteristic Ray-Tracing <strong>Radiation Transfer Simulations. </strong>
 
-						(1). High-order Short Characteristic Ray-Tracing <strong>Radiation Transfer Simulations. </strong>
+				(2) <a href="https://github.com/zhxu-astro/DeepIllustris">Deep Illustris</a> <strong>Inferring Unobservable Structures of Galaxies via Deep Generative Networks</strong> 
 
-						(2) <a href="https://github.com/zhxu-astro/DeepIllustris">Deep Illustris</a> <strong>Inferring Unobservable Structures of Galaxies via Deep Generative Networks</strong> 
+				(3). Using Unsupervised Deep Learning to disentangle physical properties in <strong>Dust-Gas coupled Accretion Diskes</strong>. </p>
 
-						(3). Using Unsupervised Deep Learning to disentangle physical properties in <strong>Dust-Gas coupled Accretion Diskes</strong>. </p>
+				<!-- <p>Bayesian inference for sophisticated models in a computationally tractable implementation; data-driven approaches to model disk rotation curves and search for the influence of planets;</p> -->
 
-						<!-- <p>Bayesian inference for sophisticated models in a computationally tractable implementation; data-driven approaches to model disk rotation curves and search for the influence of planets;</p> -->
+				<p>If you are interested in any problem that I'm working on or related, please contact me! I'm look forward to potential collaborators!</p>
 
-						<p>If you are interested in any problem that I'm working on or related, please contact me! I'm look forward to potential collaborators!</p>
+				<ul class="actions">
+					<li><a href="mailto:xuzhenghao@pku.edu.cn" class="button">Email Me ! ——— xuzhenghao[at]pku[dot]edu[dot]cn</a></li>
+				</ul>
+			</section>
 
-						<ul class="actions">
-							<li><a href="mailto:xuzhenghao@pku.edu.cn" class="button">Email Me ! ——— xuzhenghao[at]pku[dot]edu[dot]cn</a></li>
-						</ul>
-					</section>
+			<!-- Biography -->
+			<section id="biography">
+				<header class="major">
+					<h2>BIOGRAPHY</h2>
+				</header>
 
+				<p><strong>Graduate Student</strong>, 2021-Present <br />
+				<a href="https://www.physics.ucsb.edu">Department of Physics, University of California, Santa Barbara</a><br />
+				Santa Barbara, California, USA<br />
+				</p>
+				
+				<p><strong>Researcher Assistant</strong>, 2019-2020 <br />
+				<a href="http://www.castu.tsinghua.edu.cn/publish/casen/index.html">Institute for Advanced Study</a><br />
+				Tsinghua University, Beijing, China<br />
+				Advisor: <a href="http://astro.tsinghua.edu.cn/~xbai/">Prof. Xuening Bai</a>
+				</p>
+
+
+				<p><strong>Visiting Student</strong>, 2018 <br />
+				<a href="https://space.mit.edu">Kavli Institute for Astrophysics and Space Research</a><br />
+				MIT, Massachusetts, USA <br />
+				<!-- (Massachusetts Institute of Technology) -->
+				Advisor: <a href="http://web.mit.edu/physics/people/faculty/vogelsberger_mark.html">Prof. Mark Vogelsberger</a>
+				</p>
+
+				<p><strong>Bachelor of Science</strong>, 2015-2019 <br />
+				<!-- Department of Scientific & Engineering Computing<br /> -->
+				<a href="http://english.math.pku.edu.cn/">School of Mathematical Sciences</a><br />
+				Peking University, Beijing, China</p>
+				<ul class="actions">
+					<li><a href="ZhenghaoXu_CV.pdf" class="button">Curriculum vitae</a></li>
+				</ul>
+			</section>
 				<!-- One More -->
 				
 					<section id="one more">
