--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 				<a href="http://english.math.pku.edu.cn/">School of Mathematical Sciences</a><br />
 				Peking University, Beijing, China</p>
 				<ul class="actions">
-					<li><a href="ZhenghaoXu_CV.pdf" class="button">Curriculum vitae</a></li>
+					<li><a href="myCV-2023.pdf" class="button">Curriculum vitae</a></li>
 				</ul>
 			</section>
 				<!-- One More -->
@@ -116,7 +116,7 @@
 						<a href="http://english.math.pku.edu.cn/">School of Mathematical Sciences</a><br />
 						Peking University, Beijing, China</p>
 						<ul class="actions">
-							<li><a href="ZhenghaoXu_CV.pdf" class="button">Curriculum vitae</a></li>
+							<li><a href="myCV-2023.pdf" class="button">Curriculum vitae</a></li>
 						</ul>
 					</section>
 				
